--- a/config_files/spark-defaults.conf
+++ b/config_files/spark-defaults.conf
@@ -47,3 +47,10 @@ spark.history.fs.update.interval    10s
 spark.history.ui.port               18080
 spark.yarn.stagingDir               hdfs://node-master:9000/user
 spark.yarn.jars                     hdfs://node-master:9000/spark-libs/*
+
+spark.mongodb.read.connection.uri  mongodb://root:example@mongo:27017
+spark.mongodb.read.database        testDatabase
+spark.mongodb.read.collection      testCollection
+spark.mongodb.write.connection.uri  mongodb://root:example@mongo:27017
+spark.mongodb.write.database        testDatabase
+spark.mongodb.write.collection      testCollection
