--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,29 @@ services:
     command: /root/config_files/bootstrap.sh
     volumes: 
       - ./apps:/root/apps
+    environment:
+      MONGO_URI: mongodb://root:example@mongo/
+    links:
+      - mongo
+
+  mongo:
+    image: mongo
+    restart: always
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
 
   slave1:
     container_name: slave1
